Bug 397910 - The title of an open tab from the sidebar is incorrect and is not unified with the window title until I switch between tabs
Summary: The title of an open tab from the sidebar is incorrect and is not unified wit...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Hallas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-27 01:58 UTC by Patrick Silva
Modified: 2018-09-02 09:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-08-27 01:58:40 UTC
On neon dev unstable...

1. open dolphin
2. right click some item from the side bar, let's say "Network"
3. select "open in a new tab":
now you have two tabs named "Home", but note their different icons
4. click the tab that has network icon:
now tab title is "Home", window title is "Network"
5. switch to the tab that has home icon and click the tab that has network icon again: now both tab and window titles are "Network"
Comment 1 Nate Graham 2018-08-27 18:25:12 UTC
Introduced by https://phabricator.kde.org/D14442
Comment 2 David Hallas 2018-08-28 07:32:22 UTC
Thanks for reporting this :)

I have fixed this in https://phabricator.kde.org/D15112. Please give it a try.

Also, please keep on testing this new feature and report feedback, it is very much appreciated
Comment 3 Elvis Angelaccio 2018-09-02 08:56:38 UTC
Git commit a23acffd5e50e77b68da2c54287db369728b1ddb by Elvis Angelaccio.
Committed on 02/09/2018 at 08:55.
Pushed by elvisangelaccio into branch 'master'.

Add test case for open-in-new-tab title regression

Fix will be in D15112.

M  +18   -0    src/tests/dolphinmainwindowtest.cpp

https://commits.kde.org/dolphin/a23acffd5e50e77b68da2c54287db369728b1ddb
Comment 4 David Hallas 2018-09-02 09:08:26 UTC
Git commit 5a9567730d37126a66d5723fd22c215f184d1f7f by David Hallas.
Committed on 02/09/2018 at 09:08.
Pushed by hallas into branch 'master'.

Changes the tabName function to return the name of a specific tab

Summary:
Changes the tabName function to return the name of the passed in
DolphinTabPage. Previously it would return the name of the active tab,
which causes in-active tabs to get the wrong name.

Test Plan:
Open Dolphin
Right click a folder and select 'Open in new tab'
Notice that the new tab has the wrong title

Reviewers: #dolphin, ngraham, elvisangelaccio

Reviewed By: #dolphin, ngraham, elvisangelaccio

Subscribers: kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D15112

M  +6    -6    src/dolphintabwidget.cpp
M  +3    -2    src/dolphintabwidget.h

https://commits.kde.org/dolphin/5a9567730d37126a66d5723fd22c215f184d1f7f